# Agents

Framework/agents/: .env_sample  .gitignore  README.md  pyproject.toml
Framework/agents/.run/: Visual Evaluator UI.run.xml
Framework/agents/apps/: Makefile
Framework/agents/apps/vision_evaluator/: Dockerfile  Makefile  agent.py  api.py  main.py  pyproject.toml  run_api.sh  schemas.py  ui.py
Framework/agents/apps/vision_evaluator/configs/: gemini.yaml  lmstudio.yaml
Framework/agents/src/agents/: constants.py  logs.py
Framework/agents/src/agents/core/: agent_types.py  chains.py  workflows.py
Framework/agents/src/agents/core/agents/: agents.py
Framework/agents/src/agents/core/chains/: base.py  simple.py
Framework/agents/src/agents/core/clients/: base.py  gemini.py  generic.py  internal.py  lms.py  loader.py  ollama.py
Framework/agents/src/agents/core/clients/adapters/: __init__.py  base.py  openai.py
Framework/agents/src/agents/core/clients/sdks/: gemini.py  lms.py
Framework/agents/src/agents/core/models/: README.md  gpt2.py
Framework/agents/src/agents/core/schemas/: agents.py  chains.py  clients.py  messages.py  tools.py
Framework/agents/src/agents/core/schemas/clients/: gemini.py  ollama.py
Framework/agents/src/agents/schemas/: base.py  chains.py
Framework/agents/src/agents/schemas/clients/: base.py  gemini.py  ollama.py
Framework/agents/src/agents/scripts/: lms_vs_generic_clients.py
Framework/agents/src/agents/tasks/: joker.py
Framework/agents/src/agents/tasks/joker/: rag_chain.py  simple_chain.py
Framework/agents/tests/data/: lmstudio_config.yaml
Framework/agents/tests/test_agents/test_core/test_clients/: test_loader.py
Tools/: README.md  pyproject.toml
